--- a/doc/poddoc/man/gspl-xpq.1
+++ b/doc/poddoc/man/gspl-xpq.1
@@ -123,27 +123,26 @@
 .rm #[ #] #H #V #F C
 .\" ========================================================================
 .\"
-.IX Title "GSPL-XMPQ 1"
-.TH GSPL-XMPQ 1 "2010-02-01" "GNUspool Release 1" "GNUspool Print Manager"
+.IX Title "GSPL-XPQ 1"
+.TH GSPL-XPQ 1 "2010-02-01" "GNUspool Release 1" "GNUspool Print Manager"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
 .nh
 .SH "NAME"
-gspl\-xmpq \- X/Motif spool queue view
+gspl\-xpq \- GTK+ spool queue view
 .SH "SYNOPSIS"
 .IX Header "SYNOPSIS"
-\&\fBgspl-xmpq\fR
+\&\fBgspl-xpq\fR
 .SH "DESCRIPTION"
 .IX Header "DESCRIPTION"
-\&\fBGspl-Xmpq\fR is a fully interactive Motif alternative to the standard
+\&\fBGspl-xpq\fR is a fully interactive \s-1GTK+\s0 alternative to the standard
 print queue manager \fIgspl\-pq\fR\|(1). As with \fIspq\fR\|(1) the format of the screen
 display, the help messages and the command keystrokes can be easily
 altered to suit your requirements.
 .PP
 Unlike \fIgspl\-pq\fR\|(1) there are no specific command line options to
-\&\fBgspl-xmpq\fR. The facility to change or specify resources settings for an
-X11 (and hence Motif) program on the command line can be used.
+\&\fBgspl-xpq\fR. Options can be set and saved from within the program.
 .SH "FILES"
 .IX Header "FILES"
 \&\fI~/.gnuspool\fR
@@ -162,8 +161,8 @@ printers directory
 error log file
 .SH "ENVIRONMENT"
 .IX Header "ENVIRONMENT"
-.IP "GSPL-XMPQCONF" 4
-.IX Item "GSPL-XMPQCONF"
+.IP "\s-1GSPL_XPQCONF\s0" 4
+.IX Item "GSPL_XPQCONF"
 path name of alternative message file.
 .SH "SEE ALSO"
 .IX Header "SEE ALSO"
