--- a/doc/poddoc/pod/gspl-xpq.1
+++ b/doc/poddoc/pod/gspl-xpq.1
@@ -1,21 +1,20 @@
 =head1 NAME
 
-gspl-xmpq - X/Motif spool queue view
+gspl-xpq - GTK+ spool queue view
 
 =head1 SYNOPSIS
 
-B<gspl-xmpq>
+B<gspl-xpq>
 
 =head1 DESCRIPTION
 
-B<Gspl-Xmpq> is a fully interactive Motif alternative to the standard
+B<Gspl-xpq> is a fully interactive GTK+ alternative to the standard
 print queue manager gspl-pq(1). As with spq(1) the format of the screen
 display, the help messages and the command keystrokes can be easily
 altered to suit your requirements.
 
 Unlike gspl-pq(1) there are no specific command line options to
-B<gspl-xmpq>. The facility to change or specify resources settings for an
-X11 (and hence Motif) program on the command line can be used.
+B<gspl-xpq>. Options can be set and saved from within the program.
 
 =head1 FILES
 
@@ -38,7 +37,7 @@ error log file
 
 =over 4
 
-=item GSPL-XMPQCONF
+=item GSPL_XPQCONF
 
 path name of alternative message file.
 
@@ -73,4 +72,4 @@ John M Collins, Xi Software Ltd.
 ## Local Variables:
 ## mode: nroff
 ## End:
-## LocalWords:  gspl-pq SPQCONF gspl-xmpq
+## LocalWords:  gspl-pq SPQCONF gspl-xpq
