--- a/doc/poddoc/pod/gspl-xuser.1
+++ b/doc/poddoc/pod/gspl-xuser.1
@@ -1,44 +1,40 @@
 =head1 NAME
 
-gspl-xmpq - X/Motif spool queue view
+gspl-xuser - GTK user control
 
 =head1 SYNOPSIS
 
-B<gspl-xmpq>
+B<gspl-xuser>
 
 =head1 DESCRIPTION
 
-B<Gspl-Xmpq> is a fully interactive Motif alternative to the standard
-print queue manager gspl-pq(1). As with spq(1) the format of the screen
-display, the help messages and the command keystrokes can be easily
-altered to suit your requirements.
+B<Gspl-xuser> is a fully interactive GTK alternative to the standard
+user control program gspl-user(1), but only in the fully interactive
+mode, so it cannot be started by a user without I<Edit admin file>
+privilege.
 
-Unlike gspl-pq(1) there are no specific command line options to
-B<gspl-xmpq>. The facility to change or specify resources settings for an
-X11 (and hence Motif) program on the command line can be used.
+Unlike gspl-user(1) there are no specific command line options to
+B<gspl-xuser>. Options can be set and saved from within the program.
 
 =head1 FILES
 
 F<~/.gnuspool>
 configuration file (home directory)
 
-F< .gnuspool>
+F<.gnuspool>
 configuration file (current directory)
 
-F<gspl-xmpq.help>
+F<gspl-xmuser.help>
 message file
 
-F<gnuspoolptrs>
-printers directory
-
-F<spshed_reps>
-error log file
+F<spufile0>
+user control file
 
 =head1 ENVIRONMENT
 
 =over 4
 
-=item GSPL-XMPQCONF
+=item GSPL_XUSERCONF
 
 path name of alternative message file.
 
@@ -53,8 +49,9 @@ gspl-qdel(1),
 gspl-qchange(1),
 gspl-qlist(1),
 gspl-plist(1),
-gnuspool.conf(5),
-gnuspool.hosts(5).
+gspl-uchange(1),
+gspl-ulist(1),
+gspl-spuconv(8).
 
 =head1 COPYRIGHT
 
@@ -73,4 +70,4 @@ John M Collins, Xi Software Ltd.
 ## Local Variables:
 ## mode: nroff
 ## End:
-## LocalWords:  gspl-pq SPQCONF gspl-xmpq
+## LocalWords:  spuser gspl-xuser
