Minor amendments to remove historic ifdefs.

--- a/doc/poddoc/pod/gspl-servinstall.1
+++ b/doc/poddoc/pod/gspl-servinstall.1
@@ -32,4 +32,4 @@ John M Collins, Xi Software Ltd.
 ## Local Variables:
 ## mode: nroff
 ## End:
-## LocalWords:  spuser gspl-xuser
+## LocalWords:  gspl-user gspl-xuser
