--- a/doc/poddoc/pod/gspl-hostedit.8
+++ b/doc/poddoc/pod/gspl-hostedit.8
@@ -25,7 +25,7 @@ F<gnuspool.hosts>, the host table for GNUspool.
 
 B<gspl-xhostedit> is a similar program using GTK+
 
-They knows about local addresses (selecting the correct IP address for a
+They know about local addresses (selecting the correct IP address for a
 machine with different IPs on different networks), Windows clients,
 DHCP, trusted hosts, manual connections, probes and timeouts.
 
@@ -41,7 +41,8 @@ done this so that all parts of the system "know" about the new hosts,
 however this may not be necessary in all cases, you may only have to
 "C<kill -1>" the process id of the xtnetserv process.
 
-Options are identical in each case
+Options are identical in each case (except B<gspl-xhostedit> also
+takes options parsed by GTK+).
 
 =head1 OPTIONS
 
